--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: evaluation
+name: sucocbt
 channels:
   - pytorch
   - conda-forge
@@ -6,301 +6,168 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=4.5=1_gnu
-  - alsa-lib=1.2.3=h516909a_0
+  - asttokens=2.0.5=pyhd8ed1ab_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
   - blas=1.0=mkl
-  - blosc=1.21.0=h9c3ff4c_0
-  - brotli=1.0.9=h9c3ff4c_4
-  - brunsli=0.1=h9c3ff4c_0
+  - bottleneck=1.3.4=py310h9102076_0
+  - brotlipy=0.7.0=py310h7f8727e_1002
   - bzip2=1.0.8=h7b6447c_0
-  - c-ares=1.17.1=h7f98852_1
   - ca-certificates=2021.10.8=ha878542_0
-  - cairo=1.16.0=h6cf1ce9_1008
-  - certifi=2021.10.8=py39hf3d152e_1
-  - charls=2.2.0=h9c3ff4c_0
-  - cloudpickle=2.0.0=pyhd8ed1ab_0
+  - certifi=2021.10.8=py310hff52083_2
+  - cffi=1.15.0=py310hd667e15_1
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - colorama=0.4.4=pyhd3eb1b0_0
+  - cryptography=36.0.0=py310h9ce1e76_0
   - cudatoolkit=11.3.1=h2bc3f7f_2
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - cytoolz=0.11.0=py39h3811e60_3
-  - dask-core=2022.1.0=pyhd8ed1ab_0
-  - dbus=1.13.6=h48d8840_2
+  - debugpy=1.5.1=py310h295c915_0
   - decorator=5.1.1=pyhd8ed1ab_0
-  - expat=2.4.1=h9c3ff4c_0
-  - ffmpeg=4.3.2=hca11adc_0
-  - fontconfig=2.13.1=hba837de_1005
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - executing=0.8.3=pyhd8ed1ab_0
+  - ffmpeg=4.3=hf484d3e_0
   - freetype=2.11.0=h70c0345_0
-  - fsspec=2022.1.0=pyhd8ed1ab_0
-  - geos=3.9.1=h9c3ff4c_2
-  - gettext=0.19.8.1=h0b5b191_1005
   - giflib=5.2.1=h7b6447c_0
-  - glib=2.68.3=h9c3ff4c_0
-  - glib-tools=2.68.3=h9c3ff4c_0
   - gmp=6.2.1=h2531618_2
   - gnutls=3.6.15=he1e5248_0
-  - graphite2=1.3.13=h58526e2_1001
-  - gst-plugins-base=1.18.4=hf529b03_2
-  - gstreamer=1.18.4=h76c114f_2
-  - harfbuzz=2.8.2=h83ec7ef_0
-  - hdf5=1.10.6=nompi_h6a2412b_1114
-  - icu=68.1=h58526e2_0
-  - imagecodecs=2021.3.31=py39h559889c_0
-  - imageio=2.13.5=pyh239f2a4_0
-  - imgaug=0.4.0=pyhd8ed1ab_1
+  - idna=3.3=pyhd3eb1b0_0
   - intel-openmp=2021.4.0=h06a4308_3561
-  - jasper=1.900.1=h07fcdf6_1006
+  - ipykernel=6.12.1=py310hfdc917e_0
+  - ipython=8.2.0=py310hff52083_0
+  - jedi=0.18.1=py310hff52083_1
   - jpeg=9d=h7f8727e_0
-  - jxrlib=1.1=h7f98852_2
-  - kiwisolver=1.3.1=py39h1a9c180_1
-  - krb5=1.19.2=hcc1bbae_0
+  - jupyter_client=7.2.1=pyhd8ed1ab_0
+  - jupyter_core=4.9.2=py310hff52083_0
   - lame=3.100=h7b6447c_0
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.35.1=h7274673_9
-  - lerc=2.2.1=h9c3ff4c_0
-  - libaec=1.0.5=h9c3ff4c_0
-  - libblas=3.9.0=12_linux64_mkl
-  - libcblas=3.9.0=12_linux64_mkl
-  - libcurl=7.78.0=h2574ce0_0
-  - libdeflate=1.7=h7f98852_5
-  - libedit=3.1.20191231=he28a2e2_2
-  - libev=4.33=h516909a_1
-  - libevent=2.1.10=hcdb4288_3
   - libffi=3.3=he6710b0_2
   - libgcc-ng=9.3.0=h5101ec6_17
-  - libgfortran-ng=11.2.0=h69a702a_11
-  - libgfortran5=11.2.0=h5c6108e_11
-  - libglib=2.68.3=h3e27bee_0
   - libgomp=9.3.0=h5101ec6_17
-  - libiconv=1.16=h516909a_0
+  - libiconv=1.15=h63c8f33_5
   - libidn2=2.3.2=h7f8727e_0
-  - liblapack=3.9.0=12_linux64_mkl
-  - liblapacke=3.9.0=12_linux64_mkl
-  - libllvm11=11.1.0=hf817b99_2
-  - libnghttp2=1.43.0=h812cca2_0
-  - libogg=1.3.4=h7f98852_1
-  - libopencv=4.5.2=py39h2406f9b_0
-  - libopus=1.3.1=h7f98852_1
   - libpng=1.6.37=hbc83047_0
-  - libpq=13.3=hd57d9b9_0
-  - libprotobuf=3.15.8=h780b84a_0
-  - libssh2=1.9.0=ha56f1ee_6
+  - libsodium=1.0.18=h36c2ea0_1
   - libstdcxx-ng=9.3.0=hd4cf53a_17
   - libtasn1=4.16.0=h27cfd23_0
   - libtiff=4.2.0=h85742a9_0
   - libunistring=0.9.10=h27cfd23_0
-  - libuuid=2.32.1=h7f98852_1000
+  - libuuid=1.0.3=h7f8727e_2
   - libuv=1.40.0=h7b6447c_0
-  - libvorbis=1.3.7=h9c3ff4c_0
-  - libwebp=1.2.0=h89dd481_0
-  - libwebp-base=1.2.0=h27cfd23_0
-  - libxcb=1.13=h7f98852_1003
-  - libxkbcommon=1.0.3=he3ba5ed_0
-  - libxml2=2.9.12=h72842e0_0
-  - libzopfli=1.0.3=h9c3ff4c_0
-  - locket=0.2.0=py_2
+  - libwebp=1.2.2=h55f646e_0
+  - libwebp-base=1.2.2=h7f8727e_0
   - lz4-c=1.9.3=h295c915_1
-  - matplotlib-base=3.4.2=py39h2fa2bec_0
+  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
   - mkl=2021.4.0=h06a4308_640
-  - mkl-service=2.4.0=py39h7f8727e_0
-  - mkl_fft=1.3.1=py39hd3c417c_0
-  - mkl_random=1.2.2=py39h51133e4_0
-  - mysql-common=8.0.25=ha770c72_0
-  - mysql-libs=8.0.25=h935591d_0
+  - mkl-service=2.4.0=py310h7f8727e_0
+  - mkl_fft=1.3.1=py310hd6ae3a3_0
+  - mkl_random=1.2.2=py310h00e6091_0
   - ncurses=6.3=h7f8727e_2
+  - nest-asyncio=1.5.5=pyhd8ed1ab_0
   - nettle=3.7.3=hbbd107a_1
-  - networkx=2.5=py_0
-  - nspr=4.30=h9c3ff4c_0
-  - nss=3.67=hb5efdd6_0
-  - numpy=1.21.2=py39h20f2e39_0
-  - numpy-base=1.21.2=py39h79a1101_0
-  - olefile=0.46=pyhd3eb1b0_0
-  - opencv=4.5.2=py39hf3d152e_0
+  - numexpr=2.7.3=py310hd732450_1
+  - numpy=1.21.2=py310h20f2e39_0
+  - numpy-base=1.21.2=py310h79a1101_0
   - openh264=2.1.1=h4ff587b_0
-  - openjpeg=2.4.0=hb52868f_1
-  - openssl=1.1.1m=h7f8727e_0
+  - openssl=1.1.1n=h7f8727e_0
   - packaging=21.3=pyhd8ed1ab_0
-  - partd=1.2.0=pyhd8ed1ab_0
-  - pcre=8.45=h9c3ff4c_0
-  - pip=21.2.4=py39h06a4308_0
-  - pixman=0.40.0=h36c2ea0_0
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - py-opencv=4.5.2=py39hef51801_0
-  - pyparsing=3.0.6=pyhd8ed1ab_0
-  - python=3.9.7=h12debd9_1
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.9=2_cp39
-  - pytorch=1.10.1=py3.9_cuda11.3_cudnn8.2.0_0
+  - pandas=1.4.1=py310h295c915_1
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
+  - pillow=9.0.1=py310h22f2fdc_0
+  - pip=21.2.4=py310h06a4308_0
+  - prompt-toolkit=3.0.29=pyha770c72_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pygments=2.11.2=pyhd8ed1ab_0
+  - pyopenssl=22.0.0=pyhd3eb1b0_0
+  - pyparsing=3.0.7=pyhd8ed1ab_0
+  - pysocks=1.7.1=py310h06a4308_0
+  - python=3.10.4=h12debd9_0
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python_abi=3.10=2_cp310
+  - pytorch=1.11.0=py3.10_cuda11.3_cudnn8.2.0_0
   - pytorch-mutex=1.0=cuda
-  - pywavelets=1.1.1=py39hce5d2b2_3
-  - pyyaml=5.4.1=py39h3811e60_0
-  - qt=5.12.9=hda022c4_4
+  - pytz=2021.3=pyhd3eb1b0_0
+  - pyzmq=22.3.0=py310h295c915_2
   - readline=8.1.2=h7f8727e_1
-  - scikit-image=0.17.2=py39hde0f152_4
-  - scipy=1.7.0=py39hee8e79c_1
-  - setuptools=58.0.4=py39h06a4308_0
-  - shapely=1.7.1=py39ha61afbd_5
-  - six=1.16.0=pyhd3eb1b0_0
-  - snappy=1.1.8=he1b5a44_3
-  - sqlite=3.37.0=hc218d9a_0
-  - tifffile=2021.4.8=pyhd8ed1ab_0
+  - requests=2.27.1=pyhd3eb1b0_0
+  - setuptools=58.0.4=py310h06a4308_0
+  - six=1.16.0=pyhd3eb1b0_1
+  - sqlite=3.38.2=hc218d9a_0
+  - stack_data=0.2.0=pyhd8ed1ab_0
   - tk=8.6.11=h1ccaba5_0
-  - toolz=0.11.2=pyhd8ed1ab_0
-  - torchaudio=0.10.1=py39_cu113
-  - torchvision=0.11.2=py39_cu113
-  - tornado=6.1=py39h3811e60_1
-  - typing_extensions=3.10.0.2=pyh06a4308_0
-  - tzdata=2021e=hda174b7_0
+  - torchaudio=0.11.0=py310_cu113
+  - torchvision=0.12.0=py310_cu113
+  - tornado=6.1=py310h7f8727e_0
+  - tqdm=4.63.0=pyhd3eb1b0_0
+  - traitlets=5.1.1=pyhd8ed1ab_0
+  - typing_extensions=4.1.1=pyh06a4308_0
+  - tzdata=2022a=hda174b7_0
+  - urllib3=1.26.8=pyhd3eb1b0_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
   - wheel=0.37.1=pyhd3eb1b0_0
-  - x264=1!161.3030=h7f98852_1
-  - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libice=1.0.10=h7f98852_0
-  - xorg-libsm=1.2.3=hd9c2040_1000
-  - xorg-libx11=1.7.2=h7f98852_0
-  - xorg-libxau=1.0.9=h7f98852_0
-  - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xorg-libxext=1.3.4=h7f98852_1
-  - xorg-libxrender=0.9.10=h7f98852_1003
-  - xorg-renderproto=0.11.1=h7f98852_1002
-  - xorg-xextproto=7.3.0=h7f98852_1002
-  - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.5=h7b6447c_0
-  - yaml=0.2.5=h516909a_0
-  - zfp=0.5.5=h9c3ff4c_5
+  - zeromq=4.3.4=h9c3ff4c_0
   - zlib=1.2.11=h7f8727e_4
   - zstd=1.4.9=haebb681_0
   - pip:
     - absl-py==1.0.0
-    - adversarial-robustness-toolbox==1.9.1
     - aiohttp==3.8.1
     - aiosignal==1.2.0
     - albumentations==1.1.0
-    - apex==0.1
-    - argon2-cffi==21.3.0
-    - argon2-cffi-bindings==21.2.0
-    - asttokens==2.0.5
-    - astunparse==1.6.3
     - async-timeout==4.0.2
     - attrs==21.4.0
-    - backcall==0.2.0
-    - black==21.12b0
-    - bleach==4.1.0
-    - cachetools==4.2.4
-    - cffi==1.15.0
-    - charset-normalizer==2.0.10
-    - click==8.0.3
-    - configparser==5.2.0
-    - debugpy==1.5.1
-    - defusedxml==0.7.1
+    - cachetools==5.0.0
+    - click==8.1.2
     - docker-pycreds==0.4.0
-    - efficientnet-pytorch==0.7.0
-    - entrypoints==0.3
-    - executing==0.8.2
-    - facenet-pytorch==2.5.2
-    - flatbuffers==2.0
     - frozenlist==1.3.0
-    - future==0.18.2
-    - gast==0.5.3
+    - fsspec==2022.3.0
     - gitdb==4.0.9
-    - gitpython==3.1.26
-    - google-auth==2.3.3
+    - gitpython==3.1.27
+    - google-auth==2.6.2
     - google-auth-oauthlib==0.4.6
-    - google-pasta==0.2.0
-    - grpcio==1.43.0
-    - h5py==3.6.0
-    - idna==3.3
-    - importlib-metadata==4.10.1
-    - ipykernel==6.7.0
-    - ipyplot==1.1.1
-    - ipython==8.0.1
-    - ipython-genutils==0.2.0
-    - ipywidgets==7.6.5
-    - jedi==0.18.1
-    - jinja2==3.0.3
+    - grpcio==1.44.0
+    - imageio==2.16.1
     - joblib==1.1.0
-    - jsonschema==4.4.0
-    - jupyter-client==7.1.1
-    - jupyter-core==4.9.1
-    - jupyterlab-pygments==0.1.2
-    - jupyterlab-widgets==1.0.2
-    - keras==2.8.0
-    - keras-preprocessing==1.1.2
-    - libclang==13.0.0
-    - llvmlite==0.38.0
     - markdown==3.3.6
-    - markupsafe==2.0.1
-    - matplotlib-inline==0.1.3
-    - mistune==0.8.4
-    - multidict==5.2.0
-    - mypy-extensions==0.4.3
-    - nbclient==0.5.10
-    - nbconvert==6.4.1
-    - nbformat==5.1.3
-    - nest-asyncio==1.5.4
-    - notebook==6.4.8
-    - numba==0.55.0
-    - oauthlib==3.1.1
-    - opencv-python-headless==4.5.5.62
-    - opt-einsum==3.3.0
-    - pandas==1.3.5
-    - pandocfilters==1.5.0
-    - parso==0.8.3
-    - pathspec==0.9.0
+    - multidict==6.0.2
+    - networkx==2.7.1
+    - oauthlib==3.2.0
+    - opencv-python==4.5.5.64
+    - opencv-python-headless==4.5.5.64
     - pathtools==0.1.2
-    - pexpect==4.8.0
-    - pickleshare==0.7.5
-    - pillow==9.0.1
-    - platformdirs==2.4.1
-    - prometheus-client==0.13.1
     - promise==2.3
-    - prompt-toolkit==3.0.24
-    - protobuf==3.19.3
+    - protobuf==3.20.0
     - psutil==5.9.0
-    - ptyprocess==0.7.0
-    - pure-eval==0.2.1
     - pyasn1==0.4.8
     - pyasn1-modules==0.2.8
-    - pycparser==2.21
-    - pydeprecate==0.3.1
-    - pygments==2.11.2
-    - pyrsistent==0.18.1
-    - pytorch-lightning==1.5.8
+    - pydeprecate==0.3.2
+    - pytorch-lightning==1.6.0
     - pytorch-ranger==0.1.1
-    - pytz==2021.3
-    - pyzmq==22.3.0
+    - pywavelets==1.3.0
+    - pyyaml==6.0
     - qudida==0.0.4
-    - requests==2.27.1
-    - requests-oauthlib==1.3.0
+    - requests-oauthlib==1.3.1
     - rsa==4.8
+    - scikit-image==0.19.2
     - scikit-learn==1.0.2
-    - send2trash==1.8.0
-    - sentry-sdk==1.5.2
+    - scipy==1.8.0
+    - sentry-sdk==1.5.8
+    - setproctitle==1.2.2
     - shortuuid==1.0.8
     - smmap==5.0.0
-    - stack-data==0.1.4
-    - submitit==1.4.1
-    - subprocess32==3.5.4
     - tensorboard==2.8.0
     - tensorboard-data-server==0.6.1
     - tensorboard-plugin-wit==1.8.1
-    - tensorflow==2.8.0
-    - tensorflow-io-gcs-filesystem==0.24.0
-    - termcolor==1.1.0
-    - terminado==0.13.1
-    - testpath==0.5.0
-    - tf-estimator-nightly==2.8.0.dev2021122109
-    - threadpoolctl==3.0.0
+    - threadpoolctl==3.1.0
+    - tifffile==2022.3.25
     - timm==0.5.4
-    - tomli==1.2.3
     - torch-optimizer==0.3.0
-    - torchmetrics==0.7.0
-    - tqdm==4.62.3
-    - traitlets==5.1.1
-    - urllib3==1.26.8
-    - wandb==0.12.9
-    - wcwidth==0.2.5
-    - webencodings==0.5.1
-    - werkzeug==2.0.2
-    - widgetsnbextension==3.5.2
-    - wrapt==1.14.0
+    - torchmetrics==0.7.3
+    - wandb==0.12.12
+    - werkzeug==2.1.1
     - yarl==1.7.2
-    - yaspin==2.1.0
-    - zipp==3.7.0
-prefix: /home/spirosbax/anaconda3/envs/evaluation
+prefix: /home/spirosbax/miniconda3/envs/sucocbt
