--- a/environment.yml
+++ b/environment.yml
@@ -4,115 +4,77 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=4.5=1_gnu
-  - asttokens=2.0.5=pyhd8ed1ab_0
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - blas=1.0=mkl
-  - bottleneck=1.3.4=py310h9102076_0
-  - brotlipy=0.7.0=py310h7f8727e_1002
-  - bzip2=1.0.8=h7b6447c_0
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_kmp_llvm
+  - blas=2.114=mkl
+  - blas-devel=3.9.0=14_linux64_mkl
+  - bzip2=1.0.8=h7f98852_4
   - ca-certificates=2021.10.8=ha878542_0
-  - certifi=2021.10.8=py310hff52083_2
-  - cffi=1.15.0=py310hd667e15_1
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - colorama=0.4.4=pyhd3eb1b0_0
-  - cryptography=36.0.0=py310h9ce1e76_0
-  - cudatoolkit=11.3.1=h2bc3f7f_2
-  - debugpy=1.5.1=py310h295c915_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - executing=0.8.3=pyhd8ed1ab_0
+  - cudatoolkit=11.3.1=ha36c431_10
   - ffmpeg=4.3=hf484d3e_0
-  - freetype=2.11.0=h70c0345_0
-  - giflib=5.2.1=h7b6447c_0
-  - gmp=6.2.1=h2531618_2
-  - gnutls=3.6.15=he1e5248_0
-  - idna=3.3=pyhd3eb1b0_0
-  - intel-openmp=2021.4.0=h06a4308_3561
-  - ipykernel=6.12.1=py310hfdc917e_0
-  - ipython=8.2.0=py310hff52083_0
-  - jedi=0.18.1=py310hff52083_1
-  - jpeg=9d=h7f8727e_0
-  - jupyter_client=7.2.1=pyhd8ed1ab_0
-  - jupyter_core=4.9.2=py310hff52083_0
-  - lame=3.100=h7b6447c_0
-  - lcms2=2.12=h3be6417_0
-  - ld_impl_linux-64=2.35.1=h7274673_9
-  - libffi=3.3=he6710b0_2
-  - libgcc-ng=9.3.0=h5101ec6_17
-  - libgomp=9.3.0=h5101ec6_17
-  - libiconv=1.15=h63c8f33_5
-  - libidn2=2.3.2=h7f8727e_0
-  - libpng=1.6.37=hbc83047_0
-  - libsodium=1.0.18=h36c2ea0_1
-  - libstdcxx-ng=9.3.0=hd4cf53a_17
-  - libtasn1=4.16.0=h27cfd23_0
-  - libtiff=4.2.0=h85742a9_0
-  - libunistring=0.9.10=h27cfd23_0
-  - libuuid=1.0.3=h7f8727e_2
-  - libuv=1.40.0=h7b6447c_0
-  - libwebp=1.2.2=h55f646e_0
-  - libwebp-base=1.2.2=h7f8727e_0
-  - lz4-c=1.9.3=h295c915_1
-  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
-  - mkl=2021.4.0=h06a4308_640
-  - mkl-service=2.4.0=py310h7f8727e_0
-  - mkl_fft=1.3.1=py310hd6ae3a3_0
-  - mkl_random=1.2.2=py310h00e6091_0
-  - ncurses=6.3=h7f8727e_2
-  - nest-asyncio=1.5.5=pyhd8ed1ab_0
-  - nettle=3.7.3=hbbd107a_1
-  - numexpr=2.7.3=py310hd732450_1
-  - numpy=1.21.2=py310h20f2e39_0
-  - numpy-base=1.21.2=py310h79a1101_0
-  - openh264=2.1.1=h4ff587b_0
-  - openssl=1.1.1n=h7f8727e_0
-  - packaging=21.3=pyhd8ed1ab_0
-  - pandas=1.4.1=py310h295c915_1
-  - parso=0.8.3=pyhd8ed1ab_0
-  - pexpect=4.8.0=pyh9f0ad1d_2
-  - pickleshare=0.7.5=py_1003
-  - pillow=9.0.1=py310h22f2fdc_0
-  - pip=21.2.4=py310h06a4308_0
-  - prompt-toolkit=3.0.29=pyha770c72_0
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pygments=2.11.2=pyhd8ed1ab_0
-  - pyopenssl=22.0.0=pyhd3eb1b0_0
-  - pyparsing=3.0.7=pyhd8ed1ab_0
-  - pysocks=1.7.1=py310h06a4308_0
-  - python=3.10.4=h12debd9_0
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - python_abi=3.10=2_cp310
-  - pytorch=1.11.0=py3.10_cuda11.3_cudnn8.2.0_0
+  - freetype=2.10.4=h0708190_1
+  - giflib=5.2.1=h36c2ea0_2
+  - gmp=6.2.1=h58526e2_0
+  - gnutls=3.6.13=h85f3911_1
+  - jbig=2.1=h7f98852_2003
+  - jpeg=9e=h166bdaf_1
+  - lame=3.100=h7f98852_1001
+  - lcms2=2.12=hddcbb42_0
+  - ld_impl_linux-64=2.36.1=hea4e1c9_2
+  - lerc=3.0=h9c3ff4c_0
+  - libblas=3.9.0=14_linux64_mkl
+  - libcblas=3.9.0=14_linux64_mkl
+  - libdeflate=1.10=h7f98852_0
+  - libffi=3.4.2=h7f98852_5
+  - libgcc-ng=11.2.0=h1d223b6_16
+  - libgfortran-ng=11.2.0=h69a702a_16
+  - libgfortran5=11.2.0=h5c6108e_16
+  - libgomp=11.2.0=h1d223b6_16
+  - libiconv=1.16=h516909a_0
+  - liblapack=3.9.0=14_linux64_mkl
+  - liblapacke=3.9.0=14_linux64_mkl
+  - libnsl=2.0.0=h7f98852_0
+  - libpng=1.6.37=h21135ba_2
+  - libstdcxx-ng=11.2.0=he4da1e4_16
+  - libtiff=4.3.0=h542a066_3
+  - libuuid=2.32.1=h7f98852_1000
+  - libuv=1.43.0=h7f98852_0
+  - libwebp=1.2.2=h3452ae3_0
+  - libwebp-base=1.2.2=h7f98852_1
+  - libxcb=1.13=h7f98852_1004
+  - libzlib=1.2.11=h166bdaf_1014
+  - llvm-openmp=14.0.3=he0ac6c6_0
+  - lz4-c=1.9.3=h9c3ff4c_1
+  - mkl=2022.0.1=h8d4b97c_803
+  - mkl-devel=2022.0.1=ha770c72_804
+  - mkl-include=2022.0.1=h8d4b97c_803
+  - ncurses=6.3=h27087fc_1
+  - nettle=3.6=he412f7d_0
+  - numpy=1.22.3=py39hc58783e_2
+  - openh264=2.1.1=h780b84a_0
+  - openjpeg=2.4.0=hb52868f_1
+  - openssl=3.0.2=h166bdaf_1
+  - pillow=9.1.0=py39hae2aec6_2
+  - pip=22.0.4=pyhd8ed1ab_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - python=3.9.12=h2660328_1_cpython
+  - python_abi=3.9=2_cp39
+  - pytorch=1.10.2=py3.9_cuda11.3_cudnn8.2.0_0
   - pytorch-mutex=1.0=cuda
-  - pytz=2021.3=pyhd3eb1b0_0
-  - pyzmq=22.3.0=py310h295c915_2
-  - readline=8.1.2=h7f8727e_1
-  - requests=2.27.1=pyhd3eb1b0_0
-  - setuptools=58.0.4=py310h06a4308_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - sqlite=3.38.2=hc218d9a_0
-  - stack_data=0.2.0=pyhd8ed1ab_0
-  - tk=8.6.11=h1ccaba5_0
-  - torchaudio=0.11.0=py310_cu113
-  - torchvision=0.12.0=py310_cu113
-  - tornado=6.1=py310h7f8727e_0
-  - tqdm=4.63.0=pyhd3eb1b0_0
-  - traitlets=5.1.1=pyhd8ed1ab_0
-  - typing_extensions=4.1.1=pyh06a4308_0
-  - tzdata=2022a=hda174b7_0
-  - urllib3=1.26.8=pyhd3eb1b0_0
-  - wcwidth=0.2.5=pyh9f0ad1d_2
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - xz=5.2.5=h7b6447c_0
-  - zeromq=4.3.4=h9c3ff4c_0
-  - zlib=1.2.11=h7f8727e_4
-  - zstd=1.4.9=haebb681_0
+  - readline=8.1=h46c0cb4_0
+  - sqlite=3.38.3=h4ff8645_0
+  - tbb=2021.5.0=h924138e_1
+  - tk=8.6.12=h27826a3_0
+  - torchaudio=0.10.2=py39_cu113
+  - torchvision=0.11.3=py39_cu113
+  - typing_extensions=4.2.0=pyha770c72_1
+  - tzdata=2022a=h191b570_0
+  - wheel=0.37.1=pyhd8ed1ab_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xz=5.2.5=h516909a_1
+  - zlib=1.2.11=h166bdaf_1014
+  - zstd=1.5.2=ha95c52a_0
   - pip:
     - absl-py==1.0.0
     - aiohttp==3.8.1
@@ -121,53 +83,68 @@ dependencies:
     - async-timeout==4.0.2
     - attrs==21.4.0
     - cachetools==5.0.0
-    - click==8.1.2
+    - certifi==2021.10.8
+    - charset-normalizer==2.0.12
+    - click==8.1.3
     - docker-pycreds==0.4.0
     - frozenlist==1.3.0
     - fsspec==2022.3.0
     - gitdb==4.0.9
     - gitpython==3.1.27
-    - google-auth==2.6.2
+    - google-auth==2.6.6
     - google-auth-oauthlib==0.4.6
     - grpcio==1.44.0
-    - imageio==2.16.1
+    - idna==3.3
+    - imageio==2.19.0
+    - importlib-metadata==4.11.3
     - joblib==1.1.0
     - markdown==3.3.6
     - multidict==6.0.2
-    - networkx==2.7.1
+    - networkx==2.8
     - oauthlib==3.2.0
     - opencv-python==4.5.5.64
     - opencv-python-headless==4.5.5.64
+    - packaging==21.3
+    - pandas==1.4.2
     - pathtools==0.1.2
     - promise==2.3
-    - protobuf==3.20.0
+    - protobuf==3.20.1
     - psutil==5.9.0
     - pyasn1==0.4.8
     - pyasn1-modules==0.2.8
     - pydeprecate==0.3.2
-    - pytorch-lightning==1.6.0
+    - pyparsing==3.0.8
+    - python-dateutil==2.8.2
+    - pytorch-lightning==1.6.2
     - pytorch-ranger==0.1.1
+    - pytz==2022.1
     - pywavelets==1.3.0
     - pyyaml==6.0
     - qudida==0.0.4
+    - requests==2.27.1
     - requests-oauthlib==1.3.1
     - rsa==4.8
     - scikit-image==0.19.2
     - scikit-learn==1.0.2
     - scipy==1.8.0
-    - sentry-sdk==1.5.8
-    - setproctitle==1.2.2
+    - sentry-sdk==1.5.11
+    - setproctitle==1.2.3
+    - setuptools==59.5.0
     - shortuuid==1.0.8
+    - six==1.16.0
     - smmap==5.0.0
-    - tensorboard==2.8.0
+    - tensorboard==2.9.0
     - tensorboard-data-server==0.6.1
     - tensorboard-plugin-wit==1.8.1
     - threadpoolctl==3.1.0
-    - tifffile==2022.3.25
+    - tifffile==2022.4.28
     - timm==0.5.4
     - torch-optimizer==0.3.0
-    - torchmetrics==0.7.3
-    - wandb==0.12.12
-    - werkzeug==2.1.1
+    - torchmetrics==0.8.1
+    - tqdm==4.64.0
+    - urllib3==1.26.9
+    - wandb==0.12.15
+    - werkzeug==2.1.2
     - yarl==1.7.2
-prefix: /home/spirosbax/miniconda3/envs/sucocbt
+    - zipp==3.8.0
+prefix: /home/spirosbax/anaconda3/envs/sucocbt
