--- a/environment.yml
+++ b/environment.yml
@@ -6,18 +6,36 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_kmp_llvm
+  - aom=3.3.0=h27087fc_1
+  - asttokens=2.0.5=pyhd8ed1ab_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
   - blas=2.114=mkl
   - blas-devel=3.9.0=14_linux64_mkl
   - bzip2=1.0.8=h7f98852_4
   - ca-certificates=2021.10.8=ha878542_0
+  - cffi=1.15.0=py39h4bc2ebd_0
   - cudatoolkit=11.3.1=ha36c431_10
-  - ffmpeg=4.3=hf484d3e_0
+  - cudnn=8.2.1.32=h86fa8c9_0
+  - debugpy=1.6.0=py39h5a03fae_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - executing=0.8.3=pyhd8ed1ab_0
+  - ffmpeg=5.0.1=h594f047_1
   - freetype=2.10.4=h0708190_1
+  - future=0.18.2=py39hf3d152e_5
   - giflib=5.2.1=h36c2ea0_2
   - gmp=6.2.1=h58526e2_0
   - gnutls=3.6.13=h85f3911_1
+  - icu=70.1=h27087fc_0
+  - ipykernel=6.13.0=py39hef51801_0
+  - ipython=8.3.0=py39hf3d152e_0
   - jbig=2.1=h7f98852_2003
+  - jedi=0.18.1=py39hf3d152e_1
   - jpeg=9e=h166bdaf_1
+  - jupyter_client=7.3.0=pyhd8ed1ab_0
+  - jupyter_core=4.9.2=py39hf3d152e_0
   - lame=3.100=h7f98852_1001
   - lcms2=2.12=hddcbb42_0
   - ld_impl_linux-64=2.36.1=hea4e1c9_2
@@ -25,6 +43,7 @@ dependencies:
   - libblas=3.9.0=14_linux64_mkl
   - libcblas=3.9.0=14_linux64_mkl
   - libdeflate=1.10=h7f98852_0
+  - libdrm=2.4.109=h7f98852_0
   - libffi=3.4.2=h7f98852_5
   - libgcc-ng=11.2.0=h1d223b6_16
   - libgfortran-ng=11.2.0=h69a702a_16
@@ -34,45 +53,87 @@ dependencies:
   - liblapack=3.9.0=14_linux64_mkl
   - liblapacke=3.9.0=14_linux64_mkl
   - libnsl=2.0.0=h7f98852_0
+  - libpciaccess=0.16=h516909a_0
   - libpng=1.6.37=h21135ba_2
+  - libprotobuf=3.19.4=h780b84a_0
+  - libsodium=1.0.18=h36c2ea0_1
   - libstdcxx-ng=11.2.0=he4da1e4_16
   - libtiff=4.3.0=h542a066_3
   - libuuid=2.32.1=h7f98852_1000
   - libuv=1.43.0=h7f98852_0
+  - libva=2.14.0=h7f98852_0
+  - libvpx=1.11.0=h9c3ff4c_3
   - libwebp=1.2.2=h3452ae3_0
   - libwebp-base=1.2.2=h7f98852_1
   - libxcb=1.13=h7f98852_1004
+  - libxml2=2.9.14=h22db469_0
   - libzlib=1.2.11=h166bdaf_1014
   - llvm-openmp=14.0.3=he0ac6c6_0
   - lz4-c=1.9.3=h9c3ff4c_1
+  - magma=2.5.4=h6103c52_2
+  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
   - mkl=2022.0.1=h8d4b97c_803
   - mkl-devel=2022.0.1=ha770c72_804
   - mkl-include=2022.0.1=h8d4b97c_803
+  - nccl=2.12.10.1=h0800d71_0
   - ncurses=6.3=h27087fc_1
+  - nest-asyncio=1.5.5=pyhd8ed1ab_0
   - nettle=3.6=he412f7d_0
+  - ninja=1.10.2=h4bd325d_1
   - numpy=1.22.3=py39hc58783e_2
   - openh264=2.1.1=h780b84a_0
   - openjpeg=2.4.0=hb52868f_1
-  - openssl=3.0.2=h166bdaf_1
+  - openssl=3.0.3=h166bdaf_0
+  - packaging=21.3=pyhd8ed1ab_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
   - pillow=9.1.0=py39hae2aec6_2
   - pip=22.0.4=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.29=pyha770c72_0
+  - psutil=5.9.0=py39hb9d737c_1
   - pthread-stubs=0.4=h36c2ea0_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pygments=2.12.0=pyhd8ed1ab_0
+  - pyparsing=3.0.8=pyhd8ed1ab_0
   - python=3.9.12=h2660328_1_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python_abi=3.9=2_cp39
-  - pytorch=1.10.2=py3.9_cuda11.3_cudnn8.2.0_0
+  - pytorch=1.10.2=cuda112py39h4de5995_1
+  - pytorch-gpu=1.10.2=cuda112py39h0bbbad9_1
   - pytorch-mutex=1.0=cuda
+  - pyzmq=22.3.0=py39headdf64_2
   - readline=8.1=h46c0cb4_0
+  - six=1.16.0=pyh6c4a22f_0
+  - sleef=3.5.1=h9b69904_2
   - sqlite=3.38.3=h4ff8645_0
+  - stack_data=0.2.0=pyhd8ed1ab_0
+  - svt-av1=0.9.1=h27087fc_0
   - tbb=2021.5.0=h924138e_1
   - tk=8.6.12=h27826a3_0
   - torchaudio=0.10.2=py39_cu113
-  - torchvision=0.11.3=py39_cu113
+  - torchvision=0.10.1=py39cuda112hc5182df_0_cuda
+  - tornado=6.1=py39hb9d737c_3
+  - traitlets=5.1.1=pyhd8ed1ab_0
   - typing_extensions=4.2.0=pyha770c72_1
   - tzdata=2022a=h191b570_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
   - wheel=0.37.1=pyhd8ed1ab_0
+  - x264=1!161.3030=h7f98852_1
+  - x265=3.5=h924138e_3
+  - xorg-fixesproto=5.0=h7f98852_1002
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libx11=1.7.2=h7f98852_0
   - xorg-libxau=1.0.9=h7f98852_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h7f98852_1
+  - xorg-libxfixes=5.0.3=h7f98852_1004
+  - xorg-xextproto=7.3.0=h7f98852_1002
+  - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.5=h516909a_1
+  - zeromq=4.3.4=h9c3ff4c_1
   - zlib=1.2.11=h166bdaf_1014
   - zstd=1.5.2=ha95c52a_0
   - pip:
@@ -104,18 +165,15 @@ dependencies:
     - oauthlib==3.2.0
     - opencv-python==4.5.5.64
     - opencv-python-headless==4.5.5.64
-    - packaging==21.3
     - pandas==1.4.2
     - pathtools==0.1.2
     - promise==2.3
     - protobuf==3.20.1
-    - psutil==5.9.0
     - pyasn1==0.4.8
     - pyasn1-modules==0.2.8
     - pydeprecate==0.3.2
-    - pyparsing==3.0.8
-    - python-dateutil==2.8.2
     - pytorch-lightning==1.6.2
+    - pytorch-metric-learning==1.3.0
     - pytorch-ranger==0.1.1
     - pytz==2022.1
     - pywavelets==1.3.0
@@ -131,7 +189,6 @@ dependencies:
     - setproctitle==1.2.3
     - setuptools==59.5.0
     - shortuuid==1.0.8
-    - six==1.16.0
     - smmap==5.0.0
     - tensorboard==2.9.0
     - tensorboard-data-server==0.6.1
@@ -147,5 +204,4 @@ dependencies:
     - werkzeug==2.1.2
     - yarl==1.7.2
     - zipp==3.8.0
-
 prefix: /home/spirosbax/anaconda3/envs/sucocbt
